# origin

./: .gitignore  main.py  pyproject.toml
origin/SWMM2AI-Experiment-master1/: .gitignore  ablation_study.py  attention.py  attention_lstm_model.pth  batch_train.py  causal_attention_lstm_model.pth  dataset.py  eval_indist.py  eval_multinode.py  eval_real_rainfall.py  exact_qin.py  extreme_rainfall_experiment.py  gru.py  lstm.py  mlp.py  model.py  multiscale_lstm_model.pth  nmcl_dataset.py  node_physics.py  physical_consistency_analysis.py  physics_loss.py  predict.py  pyproject.toml  readme.md  registry.py  residual.py  run_comprehensive_eval.py  run_nmcl_experiments.py  run_optimal.py  seq2seq.py  simple_attention_lstm_model.pth  simple_gru_model.pth  simple_lstm_model.pth  simple_mlp_model.pth  simple_residual_lstm_model.pth  simple_seq2seq_model.pth  template.ini  template.inp  test_lead_time.py  train.py  (+3 more)
origin/SWMM2AI-Experiment-master1/Actual Rainfall_Water Level/: 2023-11-10.xlsx  2023-11-9.xlsx  2023-6-17.xlsx  2023-6-18.xlsx  2023-6-19.xlsx  2023-6-23.xlsx  2023-6-24.xlsx  2023-6-25.xlsx  2023-6-30.xlsx  2023-7-16.xlsx  2023-7-19.xlsx  2023-7-2.xlsx  2023-7-20.xlsx  2023-7-22.xlsx  2023-7-28.xlsx  2023-7-5.xlsx  2023-8-22.xlsx  2023-8-29.xlsx  2023-8-30.xlsx  2023-9-13.xlsx  2023-9-14.xlsx  2023-9-21.xlsx  2023-9-22.xlsx  2023-9-23.xlsx  2023-9-29.xlsx  2024-1-19.xlsx  2024-1-20.xlsx  2024-10-1.xlsx  2024-10-15.xlsx  2024-10-16.xlsx  2024-10-26.xlsx  2024-10-27.xlsx  2024-10-31.xlsx  2024-10-5.xlsx  2024-10-6.xlsx  2024-10-7.xlsx  2024-11-1.xlsx  2024-11-14.xlsx  (+63 more)
(+6 files in other folders)
